--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,11 +90,33 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
+/* Consolidation
+.benefit-brand{ 
+    margin-bottom: 32px;
+    color: #ffffff;
+}
 
+.benefit-cost {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+*/
 .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
+/* Consolidation
+.benefit-brand h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+*/
+
 
 
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
@@ -102,7 +124,20 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* Consolidation
+.benefit-brand img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
 
+.benefit-cost img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+
+}
+*/
 
 .search-engine-optimization, .online-reputation-management, .social-media-marketing  {
     margin-bottom: 20px;
@@ -113,18 +148,54 @@ p {
     color: #ffffff;
     
 }
+/* Consolidation
+.online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #215f85;
+    color: #ffffff;
+}
 
+.social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #215f85;
+    color: #ffffff;
+}
+*/
 
 .search-engine-optimization img, .social-media-marketing img, .online-reputation-management img {
     max-height: 200px; 
 }
+/* Consolidation
+.social-media-marketing img {
+    max-height: 200px
+}
 
+.online-reputation-management img {
+    max-height: 200px
+}
+*/
 
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/* Consolidation
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
 
+.social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+*/
 
 .footer {
     padding: 30px;
